--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-PORTAFOLIO WEB
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <title>PORTFOLIO/SFCC</title>
+        <link rel="stylesheet" type="text/css" href="./styles.css"/>
+        <link rel="stylesheet" type="text/css" href="./tablet.css" media="screen and (min-width:600px)">
+        <link rel="stylesheet" type="text/css" href="./desktop.css" media="screen and (min-width:800px)">
+        <link rel="icon" href="./IMAGENES/portfolioIcon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <nav>      
+            <div onclick="mostrarMenu();">Menú</div>
+            <div><a href="">CV</a></div>
+        </nav>
+
+        <section id="menu" class="inactive">
+            <a onclick="mostrarMenu();" href="#architecture">Architecture</a>
+            <a onclick="mostrarMenu();" href="#civilEngineering">Civil Engineering</a>
+        </section>
+
+        <section class="mainScreen">
+            <section id="architecture" class="subTitle">
+                <div>A</div>
+                <div>r</div>
+                <div>c</div>
+                <div>h</div>
+                <div>i</div>
+                <div>t</div>
+                <div>e</div>
+                <div>c</div>
+                <div>t</div>
+                <div>u</div>
+                <div>r</div>
+                <div>e</div>
+                <div> </div>
+                <div>&</div>
+                <div> </div>
+                <div>C</div>
+                <div>i</div>
+                <div>v</div>
+                <div>i</div>
+                <div>l</div>
+                <div> </div>
+                <div>E</div>
+                <div>n</div>
+                <div>g</div>
+                <div>i</div>
+                <div>n</div>
+                <div>e</div>
+                <div>e</div>
+                <div>r</div>
+                <div>i</div>
+                <div>n</div>
+                <div>g</div>
+            </section>
+
+        </section>
+
+        <h3>ARCHITECTURE</h3>
+        
+        <section class="containerArchitecture">
+
+        </section>
+        <h3 id="civilEngineering">CIVIL ENGINEERING</h3>
+        <section class="containerCivilEngineering">
+        </section>
+        <h4>Ver. 1.0</h4>
+        <script src="portafolio.js"></script>
+    </body>
+</html>
+
