--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3 id="civilEngineering">CIVIL ENGINEERING</h3>
         <section class="containerCivilEngineering">
         </section>
-        <h4>Ver. 1.0</h4>
+        <h4>Ver. 1.2 (Beta)</h4>
         <script src="portafolio.js"></script>
     </body>
 </html>
