--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <link rel="stylesheet" type="text/css" href="./tablet.css" media="screen and (min-width:600px)">
         <link rel="stylesheet" type="text/css" href="./desktop.css" media="screen and (min-width:800px)">
         <link rel="icon" href="./IMAGENES/portfolioIcon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>      
-            <div onclick="mostrarMenu();">Menú</div>
-            <div><a href="">CV</a></div>
+            <div class="menuButton" onclick="mostrarMenu();">MENU</div>
+            <div class="sfcc">ING. S.F.CARRASCO <a href="">CV</a></div>
         </nav>
 
         <section id="menu" class="inactive">
