--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <nav>      
             <div class="menuButton" onclick="mostrarMenu();">MENU</div>
-            <div class="sfcc">ING. S.F.CARRASCO <a href="">CV</a></div>
+            <div class="sfcc">ING. S.F.CARRASCO <a href="./IMAGENES/curriculumVitaeSFCC.pdf" target="_blank">CV</a></div>
         </nav>
 
         <section id="menu" class="inactive">
@@ -68,7 +68,7 @@
         <h3 id="civilEngineering">CIVIL ENGINEERING</h3>
         <section class="containerCivilEngineering">
         </section>
-        <h4>Ver. 1.2 (Beta)</h4>
+        <h4>Ver. 1.3 (Beta)</h4>
         <script src="portafolio.js"></script>
     </body>
 </html>
