--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h3 id="civilEngineering">CIVIL ENGINEERING</h3>
         <section class="containerCivilEngineering">
         </section>
-        <h4>Ver. 1.5 (Beta)</h4>
+        <h4>Ver. 1.6 </h4>
         <script src="portafolio.js"></script>
     </body>
 </html>
