--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <section id="menu" class="inactive">
             <a onclick="mostrarMenu();" href="#architecture">Architecture</a>
             <a onclick="mostrarMenu();" href="#civilEngineering">Civil Engineering</a>
+            <a onclick="mostrarMenu();" href="#renders">Renders</a>
         </section>
 
         <section class="mainScreen">
@@ -68,7 +69,12 @@
         <h3 id="civilEngineering">CIVIL ENGINEERING</h3>
         <section class="containerCivilEngineering">
         </section>
-        <h4>Ver. 1.6 </h4>
+
+        <h3 id="renders">RENDERS</h3>
+        <section class="containerRenders">
+        </section>
+
+        <h4>Ver. 2.0 </h4>
         <script src="portafolio.js"></script>
     </body>
 </html>
