Ver. 2.0 Muros.io

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <a onclick="mostrarMenu();" href="#renders">Renders</a>
         </section>
 
+        <a href="https://sfcc5555.github.io/WALL/" id="murosApp" target="_blank">Muros.io</a>
+
         <section class="mainScreen">
             <section id="architecture" class="subTitle">
                 <div>A</div>
@@ -66,7 +68,7 @@
         <section class="containerArchitecture">
 
         </section>
-        <h3 id="civilEngineering">CIVIL ENGINEERING</h3>
+        <h3 id="civilEngineering" >CIVIL ENGINEERING</h3>
         <section class="containerCivilEngineering">
         </section>
 
