--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <nav>      
             <div class="menuButton" onclick="mostrarMenu();">MENU</div>
-            <div class="sfcc">ING. S.F.CARRASCO <a href="./IMAGENES/curriculumVitaeSFCC.pdf" target="_blank">CV</a></div>
+            <div class="sfcc">ING. S.F.CARRASCO <a href="./IMAGENES/CVSFCarrasco.pdf" target="_blank">CV</a></div>
         </nav>
 
         <section id="menu" class="inactive">
@@ -23,7 +23,7 @@
             <a onclick="mostrarMenu();" href="#renders">Renders</a>
         </section>
 
-        <a href="https://sfcc5555.github.io/WALL/" id="murosApp" target="_blank">Muros.io</a>
+        <a href="https://sfcc-wall-calculator.netlify.app/" id="murosApp" target="_blank">Muros.io</a>
 
         <section class="mainScreen">
             <section id="architecture" class="subTitle">
